map api key update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "3981744505";
+    var serviceWorkerVersion = "1437477012";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js?version=3.0.0" defer></script>
@@ -39,7 +39,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_MAP_KEY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtP6mDSGPoAV-8X3KJJeL9VYQwNaqzqs4"></script>
 <!--  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>-->
 
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -179,7 +179,7 @@ _flutter.buildConfig = {"engineRevision":"ddf47dd3ff96dbde6d9c614db0d7f019d7c7a2
 
 _flutter.loader.load({
   serviceWorkerSettings: {
-    serviceWorkerVersion: "3981744505"
+    serviceWorkerVersion: "1437477012"
   }
 });
 -->
@@ -228,7 +228,7 @@ _flutter.buildConfig = {"engineRevision":"ddf47dd3ff96dbde6d9c614db0d7f019d7c7a2
 
        _flutter.loader.load({
          serviceWorker: {
-           serviceWorkerVersion: "3981744505",
+           serviceWorkerVersion: "1437477012",
          },
          onEntrypointLoaded: function(engineInitializer) {
          let config = { renderer: 'html' };
